--- a/src/Components/Navbar/style.css
+++ b/src/Components/Navbar/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
+
 /* Home Area Start */
 #home {
   /* background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
@@ -34,18 +36,22 @@
 }
 
 .home-description h3 {
+  text-transform: capitalize;
   font-family: var(--primary-font);
-  font-style: normal;
-  font-weight: 600;
-  font-size: 45px;
-  line-height: 65px;
-  color: var(--primary-color);
+  font-weight: 700;
+  font-size: 46px;
+  background: -webkit-linear-gradient(#1d1d1d,#000000fd); 
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 3px transparent;
+  line-height: 40px;
+  align-items: center;
+  color: white;
   transform: rotate(-6deg);
   -webkit-transform: rotate(-6deg);
   -moz-transform: rotate(-6deg);
   -ms-transform: rotate(-6deg);
   -o-transform: rotate(-6deg);
-  margin-left: 6px;
+  padding-left: 6.5px;
 }
 
 .home-description p {
