--- a/src/Pages/Home/ResponsiveHome.css
+++ b/src/Pages/Home/ResponsiveHome.css
@@ -1,3 +1,16 @@
+/* My Large Start */
+@media (min-width: 1400px) and (max-width: 2400px) {
+  .home-description h4 {
+    padding-left: 2.8px;
+  }
+  .home-description h3 {
+    padding-left: 7.1px;
+    padding-bottom: 10px;
+  }
+}
+
+/* My Large End */
+
 /* X-Large Area Start */
 @media (min-width: 1200px) and (max-width: 1399.98px) {
   /* Home Area Start */
