--- a/src/Components/About/style.css
+++ b/src/Components/About/style.css
@@ -25,7 +25,7 @@
   color: var(--primary-color);
   line-height: 36px;
   font-family: var(--primary-font);
-  margin: 10px 0;
+  margin: 30px 0 10px 0;
 }
 
 .about-inner-right {
